--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL_MONGOOSE=mongodb+srv://AnhDao:9aUK9UoTSQv5MG67@cluster0.x9kwz.mongodb.net/?retryWrites=true&w=majority
+URL_MONGOOSE = 'mongodb+srv://AnhDao:9aUK9UoTSQv5MG67@cluster0.x9kwz.mongodb.net/?retryWrites=true&w=majority'
 ACCSESS_TOKEN = 'abcxyz'
